--- a/public/templates/cafe.html
+++ b/public/templates/cafe.html
@@ -335,8 +335,9 @@
                 <a href="/attractions">สถานที่ท่องเที่ยว <i class="fas fa-chevron-down"
                         style="font-size: 0.7rem; margin-left: 5px;"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/attractions">ยอดนิยม</a></li>
-                    <li><a href="/attractions">ใกล้ทะเล</a></li>
+                    <li><a href="/attractions">ทั้งหมด</a></li>
+                    <li><a href="/attractions#popular">ยอดนิยม</a></li>
+                    <li><a href="/attractions#near-sea">ใกล้ทะเล</a></li>
                 </ul>
             </li>
             <li class="dropdown-item">
