--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -605,6 +605,7 @@
             <li class="dropdown-item">
                 <a href="/stay">ที่พัก <i class="fas fa-chevron-down" style="font-size: 0.6rem; opacity:0.5;"></i></a>
                 <ul class="dropdown-menu">
+                    <li><a href="/stay">ทั้งหมด</a></li>
                     <li><a href="/stay#hotel">โรงแรม</a></li>
                     <li><a href="/stay#hostel">โฮสเทล</a></li>
                     <li><a href="/stay#apartment">อพาร์ทเม้นท์</a></li>
