--- a/public/templates/stay.html
+++ b/public/templates/stay.html
@@ -494,13 +494,15 @@
                 <a href="/attractions">สถานที่ท่องเที่ยว <i class="fas fa-chevron-down"
                         style="font-size: 0.6rem; opacity:0.5;"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/attractions">ยอดนิยม</a></li>
-                    <li><a href="/attractions">ใกล้ทะเล</a></li>
+                    <li><a href="/attractions">ทั้งหมด</a></li>
+                    <li><a href="/attractions#popular">ยอดนิยม</a></li>
+                    <li><a href="/attractions#near-sea">ใกล้ทะเล</a></li>
                 </ul>
             </li>
             <li class="dropdown-item">
                 <a href="/stay">ที่พัก <i class="fas fa-chevron-down" style="font-size: 0.6rem; opacity:0.5;"></i></a>
                 <ul class="dropdown-menu">
+                    <li><a href="/stay">ทั้งหมด</a></li>
                     <li><a href="#hotel">โรงแรม</a></li>
                     <li><a href="#hostel">โฮสเทล</a></li>
                     <li><a href="#apartment">อพาร์ทเม้นท์</a></li>
@@ -510,8 +512,9 @@
             <li class="dropdown-item">
                 <a href="/cafe">คาเฟ่ <i class="fas fa-chevron-down" style="font-size: 0.6rem; opacity:0.5;"></i></a>
                 <ul class="dropdown-menu">
-                    <li><a href="/cafe">คาเฟ่ใกล้ทะเล</a></li>
-                    <li><a href="/cafe">คาเฟ่สัตว์เลี้ยง</a></li>
+                    <li><a href="/cafe">ทั้งหมด</a></li>
+                    <li><a href="/cafe#near-sea">คาเฟ่ใกล้ทะเล</a></li>
+                    <li><a href="/cafe#pet-cafe">คาเฟ่สัตว์เลี้ยง</a></li>
                 </ul>
             </li>
             <li><a href="/market">ตลาด</a></li>
